<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/user_et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_fullname"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>
            <EditText
                android:id="@+id/user_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/user_et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_phone_number"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/user_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_address"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>
            <EditText
                android:id="@+id/user_et_birthday_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_birthday"
                android:maxLength="8"
                android:inputType="datetime"/>
            <EditText
                android:id="@+id/user_et_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_points"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/user_et_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_editor_alias"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/user_switch_category"
                android:text="@string/user_editor_highlight_chat"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <TextView
                android:id="@+id/user_tv_signup_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Member since 11/11/2011"/>
            <Button
                android:id="@+id/user_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/textColorLight"
                android:text="@string/user_editor_button_save"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/user_pb_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</FrameLayout>
