<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_guest_container"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/main_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/main_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/main_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_login_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_admin_container"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btn_events"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_events_button"/>

        <Button
            android:id="@+id/main_btn_users"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_users_button"/>

        <Button
            android:id="@+id/main_btn_alerts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_alerts_button"/>

        <Button
            android:id="@+id/main_btn_qrs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_qrs_button"/>

        <Button
            android:id="@+id/main_btn_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_buttons_height"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/main_chat_button"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/main_pb_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</FrameLayout>