<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/event_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/event_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_editor_title"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>
            <EditText
                android:id="@+id/event_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_editor_description"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/event_et_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_editor_date"
                    android:maxLength="14"
                    android:inputType="datetime"/>
                <TextView
                    android:id="@+id/event_tv_date_repeat_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/event_et_date_repeat"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_editor_date_repeat"
                    android:text="1"
                    android:inputType="number"/>
            </LinearLayout>
            <EditText
                android:id="@+id/event_et_image_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_editor_image_url"
                android:inputType="textUri"/>
            <EditText
                android:id="@+id/event_et_facebook_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_editor_facebook_url"
                android:inputType="textUri"/>
            <EditText
                android:id="@+id/event_et_instagram_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_editor_instagram_url"
                android:inputType="textUri"/>
            <Spinner
                android:id="@+id/event_spinner_category"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <Button
                android:id="@+id/event_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/textColorLight"
                android:text="@string/event_editor_button_save"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/event_pb_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</FrameLayout>
