<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/alert_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/alert_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alerts_content_title"
            android:maxLines="1"
            android:maxLength="150"
            android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>

        <EditText
            android:id="@+id/alert_et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alerts_content_message"
            android:maxLines="1"
            android:maxLength="150"
            android:inputType="textShortMessage|textAutoCorrect|textCapSentences"/>

        <Button
            android:id="@+id/alert_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/textColorLight"
            android:text="@string/alerts_content_send"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/alert_pb_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</FrameLayout>